Improved SEO a bit.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Firepad, an open source collaborative editor</title>
+  <meta name="description" content="An open source collaborative text editor. Share documents and see changes occur in real-time." />
   <meta charset="utf-8" />
   <script src="https://cdn.firebase.com/v0/firebase.js"></script>
 
@@ -129,7 +130,7 @@
           <div class="faq-col">
             <div class="faq-question">
               <div class="faq-title">What is Firepad?</div>
-              Firepad is an open source collaborative text editor. It provides true collaborative editing,
+              Firepad is an open source real-time collaborative text editor. It provides true collaborative editing,
               complete with intelligent <a href="http://en.wikipedia.org/wiki/Operational_transformation" target="_blank">operational transform</a>-based merging and conflict resolution. Some of
               its features include cursor position synchronization, undo / redo, text highlighting,
               user attribution, presence detection, and version checkpointing.
