--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </li>
         </ul>
       </div>
-        <div class="bottom-title">Bring your app to life</div>
+        <div class="bottom-title">Real-time collaboration with no server code.</div>
       <div class="bottom-content" id="first-bc">
         <div id="uses" class="clearfix">
           <div class="uses-col clearfix">
