--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=firebase&repo=firepad&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
           </li>
           <li class="follow-btn">
-            <a href="https://twitter.com/firepad" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @Firepad</a>
+            <a href="https://twitter.com/firepadHQ" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @FirepadHQ</a>
           </li>
           <li class="tweet-btn">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.firepad.io" data-count="horizontal" data-via="Firepad" data-related="Firebase:Data Layer Behind Firepad">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.firepad.io" data-count="horizontal" data-via="FirepadHQ" data-related="Firebase:Data Layer Behind Firepad">Tweet</a>
           </li>
         </ul>
       </div>
@@ -86,7 +86,7 @@
             <div class="clearfix">
               <div class="use-icon"><img src="images/use_richtext.png"></div>
               <div class="use-text">
-                <a href="./examples/#richtext" class="use-link">Rich Text Editing</a>
+                <a href="./examples/#rich-text" class="use-link">Rich Text Editing</a>
                 Enable synchronous rich-text document editing.
               </div>
             </div>
@@ -118,7 +118,7 @@
               <div class="use-icon"><img src="images/user_socrates.png"></div>
               <div class="use-text">
                 <a href="http://socrates.io/" class="use-link" target="_blank">Socrates.io</a>
-                A collaborative Markdown editor and previewer.
+                A collaborative markdown editor and previewer.
               </div>
             </div>
           </div>
@@ -129,44 +129,53 @@
           <div class="faq-col">
             <div class="faq-question">
               <div class="faq-title">What is Firepad?</div>
-              Firepad is an open source collaborative text editor. It provides true collaborative editing,
+              <span>Firepad is an open source collaborative text editor. It provides true collaborative editing,
               complete with intelligent <a href="http://en.wikipedia.org/wiki/Operational_transformation" target="_blank">operational transform</a>-based merging and conflict resolution. Some of
               its features include cursor position synchronization, undo / redo, text highlighting,
-              user attribution, presence detection, and version checkpointing.
+              user attribution, presence detection, and version checkpointing.</span>
             </div>
             <div class="faq-question">
               <div class="faq-title">What can I do with Firepad?</div>
-              You can build any application that requires collaborative editing of text documents.
-              Firepad supports both rich text and code editing out-of-the-box, and it's easy to extend for other use cases.
+              <span>You can build any application that requires collaborative editing of text documents.
+              Firepad supports both rich text and code editing out-of-the-box, and it's easy to extend for other use cases.</span>
             </div>
             <div class="faq-question">
               <div class="faq-title">How is Firepad different than other collaborative text editors?</div>
-              Most collaborative text editors require special code to run on a server, making them
+              <span>Most collaborative text editors require special code to run on a server, making them
               impractical to use if you're not already using the right server stack. Firepad has no
               server dependencies and instead relies on <a href="https://www.firebase.com" target="_blank">Firebase</a> for real-time data synchronization.
               This means that it's easy to add Firepad to any application, even static websites.
-              All you need to do is drop in the JavaScript files and go.
+              All you need to do is drop in the JavaScript files and go.</span>
             </div>
           </div>
           <div class="faq-col">
             <div class="faq-question">
             <div class="faq-title">Which technologies does Firepad use?</div>
-              Firepad uses the powerful <a href="http://codemirror.net" target="_blank">CodeMirror</a> editor to render documents, and its operational transform
-              code borrows from <a href="https://github.com/Operational-Transformation/ot.js/" target="_blank">ot.js</a>. Behind the scenes, Firepad uses <a href="https://www.firebase.com" target="_blank">Firebase</a> for cloud data storage and synchronization.
+              <span>Firepad uses the <a href="http://codemirror.net" target="_blank">CodeMirror</a> editor to render documents, and its operational transform
+              code borrows from <a href="https://github.com/Operational-Transformation/ot.js/" target="_blank">ot.js</a>. Behind the scenes, Firepad uses <a href="https://www.firebase.com" target="_blank">Firebase</a>
+              for cloud data storage and synchronization.</span>
             </div>
             <div class="faq-question">
               <div class="faq-title">Who's behind Firepad?</div>
-              Firepad was built by <a href="https://twitter.com/mikelehen" target="_blank">Michael Lehenbauer</a> and the team at Firebase. We'd love the community to
-              support the project too and hope you'll join the effort. <a href="https://github.com/firebase/firepad" target="_blank">Star us on Github</a> and send
-              over a pull request when you have things to contribute!
+              <span>Firepad was built by <a href="https://twitter.com/mikelehen" target="_blank">Michael Lehenbauer</a> and the team at Firebase.
+              There are many other features that could be added, so please <a href="https://github.com/firebase/firepad" target="_blank">star Firepad on GitHub</a> and send
+              over a pull request when you have things to contribute!</span>
             </div>
             <div class="faq-question">
               <div class="faq-title">How is Firepad Licensed?</div>
-              <a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a>
+              <span><a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a></span>
             </div>
             <div class="faq-question">
               <div class="faq-title">Which browsers does Firepad support?</div>
-              All modern browsers: Chrome, Safari, Opera 11+, IE8+, Firefox 3.6+
+              <span>All modern browsers:
+                <ul>
+                  <li>Chrome</li>
+                  <li>Safari</li>
+                  <li>Opera 11+</li>
+                  <li>IE8+</li>
+                  <li>Firefox 3.6+</li>
+                </ul>
+              </span>
             </div>
           </div>
         </div>
