--- a/examples/index.html
+++ b/examples/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>Firepad - Examples</title>
   <link rel="stylesheet" href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" />
+  <link href="../css/prettify.css" type="text/css" rel="stylesheet" />
   <link rel="stylesheet" href="../css/global.css" />
 </head>
 
@@ -35,32 +36,37 @@
     <div class="row">
     <div class="span3 examples-sidebar">
       <ul class="nav nav-list examples-sidenav">
-        <li><a href="#rich-text"><i class="icon-chevron-right"></i> Rich Text</a></li>
+        <li><a href="#richtext"><i class="icon-chevron-right"></i> Rich Text</a></li>
         <li><a href="#code"><i class="icon-chevron-right"></i> Code Editing</a></li>
-        <li><a href="#user-list"><i class="icon-chevron-right"></i> User List</a></li>
+        <li><a href="#userlist"><i class="icon-chevron-right"></i> User List</a></li>
       </ul>
     </div>
     <div class="span9">
-      <section id="rich-text">
+      <section id="richtext">
         <div class="uses-title example-title">1. Rich Text
           <a href="#" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
-        <p>Use Firepad's rich text features for collaborative blogging, note taking, and proofreading and much more!</p>
+        <p>Use Firepad's rich text features for collaborative blogging, note taking, proofreading and much more!</p>
         <iframe class="example-container" src="richtext.html"></iframe>
+        <pre class="example-code prettyprint"></pre>
       </section>
 
       <section id="code">
         <div class="uses-title example-title">2. Code Editing
           <a href="#" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
+        <p>Combined with CodeMirror's extensive code editing features, Firepad is great for pair coding!</p>
         <iframe class="example-container" src="code.html"></iframe>
+        <pre class="example-code prettyprint"></pre>
       </section>
 
-      <section id="user-list">
+      <section id="userlist">
         <div class="uses-title example-title">3. User List
           <a href="#" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
+        <p>You can easily add user presence information and other features.</p>
         <iframe class="example-container" src="userlist.html"></iframe>
+        <pre class="example-code prettyprint"></pre>
       </section>
     </div>
   </div>
@@ -82,5 +88,6 @@
   </div>
   <script src="../js/jquery-1.9.1.min.js"></script>
   <script src="../js/examples.js"></script>
+  <script src="../js/prettify.js"></script>
 </body>
 </html>
