--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Firepad, an open source collaborative editor</title>
+  <title>Firepad, an open source collaborative text editor</title>
   <meta name="description" content="An open source collaborative text editor. Share documents and see changes occur in real-time." />
   <meta charset="utf-8" />
   <link rel="stylesheet" href="examples/codemirror/lib/codemirror.css" />
