Updated logo and wording on front page.

--- a/index.html
+++ b/index.html
@@ -92,17 +92,18 @@
               <div class="use-icon" style="margin-top: 21px;"><img src="images/use_ellipsis.png"></div>
               <div class="use-text">
                 <a href="./examples/" class="use-link">and more!</a>
-                Extend Firebase through its API or by contributing to the MIT licensed GitHub project.
+                Extend Firepad through its API or by contributing to the MIT licensed GitHub project.
               </div>
             </div>
           </div>
           <div class="uses-col clearfix">
             <div class="uses-title">Built with Firepad:</div>
             <div class="clearfix">
-              <div class="use-icon" style="margin-top: 9px;"><img src="images/user_stash.png"></div>
+              <div class="use-icon" style="margin-top: 9px;"><img src="images/user_atlassian.png"></div>
               <div class="use-text">
-                <a href="#" class="use-link" target="_blank">Stash Plugin from Atlassian</a>
+                <a href="https://marketplace.atlassian.com/plugins/com.atlassian.stash.plugin.stash-editor-plugin" class="use-link" target="_blank">Stash Realtime Editor from Atlassian</a>
                 Pair programming for the enterprise.
+                <a href="https://marketplace.atlassian.com/plugins/com.atlassian.stash.plugin.stash-editor-plugin">Try it &gt;</a>
               </div>
             </div>
             <div class="clearfix">
@@ -110,6 +111,7 @@
               <div class="use-text">
                 <a href="http://socrates.io/" class="use-link" target="_blank">Socrates.io</a>
                 A collaborative markdown editor and previewer.
+                <a href="http://socrates.io/">Try it &gt;</a>
               </div>
             </div>
           </div>
