Add extra robustness in the face of invalid data, just in case.

--- a/examples/hammer.html
+++ b/examples/hammer.html
@@ -29,8 +29,8 @@
 
   <script>
     //Firebase.enableLogging(true);
-    var firepadRef = new Firebase('https://firepad.firebaseio.com/hammer');
-
+    var firepadRef = new Firebase('https://firepad.firebaseio-demo.com/hammer');
+    
     var editorWrapper = document.getElementById('editor-wrapper');
     var cm = window.cm = CodeMirror(editorWrapper, {
       lineNumbers: true,
