Adding Aciton.io logo

--- a/examples/index.html
+++ b/examples/index.html
@@ -20,7 +20,7 @@
       <div id="top-content">
         <div id="header-links" class="clearfix">
           <a href="../">Home</a>
-          <a href="../examples/">Examples</a>
+          <a href="#" class="selected">Examples</a>
           <a href="../docs/">Documentation</a>
           <a href="http://demo.firepad.io/" target="_blank">Private Firepad</a>
         </div>
@@ -54,7 +54,7 @@
         <div class="uses-title example-title">2. Code Editing
           <a href="#" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
-        <p>Combined with CodeMirror's extensive code editing features, Firepad is great for pair coding!</p>
+        <p>Combined with CodeMirror's extensive code editing features, Firepad is great for pair programming!</p>
         <iframe class="example-container" src="code.html"></iframe>
       </section>
 
