--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="top-bg-tile">
       <div id="top-content">
         <div id="header-links" class="clearfix">
-          <a href="./">Home</a>
+          <a href="#" class="selected">Home</a>
           <a href="examples/">Examples</a>
           <a href="docs/">Documentation</a>
           <a href="http://demo.firepad.io/" target="_blank">Private Firepad</a>
@@ -115,6 +115,13 @@
                 A collaborative markdown editor and previewer.
               </div>
             </div>
+            <div class="clearfix">
+              <div class="use-icon"><img src="images/user_action.png"></div>
+              <div class="use-text">
+                <a href="http://action.io/" class="use-link" target="_blank">Action.io</a>
+                A web-based IDE and deployment platform.
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -124,9 +131,17 @@
             <div class="faq-question">
               <div class="faq-title">What is Firepad?</div>
               <span>Firepad is an open source real-time collaborative text editor. It provides true collaborative editing,
-              complete with intelligent <a href="http://en.wikipedia.org/wiki/Operational_transformation" target="_blank">operational transform</a>-based merging and conflict resolution. Some of
-              its features include cursor position synchronization, undo / redo, text highlighting,
-              user attribution, presence detection, and version checkpointing.</span>
+              complete with intelligent <a href="http://en.wikipedia.org/wiki/Operational_transformation" target="_blank">operational transform</a>-based
+              merging and conflict resolution. Some features include:
+                <ul>
+                  <li>Cursor position synchronization</li>
+                  <li>Undo & redo</li>
+                  <li>Text highlighting</li>
+                  <li>User attribution</li>
+                  <li>Presence detection</li>
+                  <li>Version checkpointing</li>
+                </ul>
+              </span>
             </div>
             <div class="faq-question">
               <div class="faq-title">What can I do with Firepad?</div>
