--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div class="use-text">
                 <a href="https://marketplace.atlassian.com/plugins/com.atlassian.stash.plugin.stash-editor-plugin" class="use-link" target="_blank">Stash Realtime Editor from Atlassian</a>
                 Pair programming for the enterprise.
-                <a href="https://marketplace.atlassian.com/plugins/com.atlassian.stash.plugin.stash-editor-plugin">Try it »</a>
+                <a href="https://marketplace.atlassian.com/plugins/com.atlassian.stash.plugin.stash-editor-plugin" target="_blank">Try it »</a>
               </div>
             </div>
             <div class="clearfix">
@@ -114,7 +114,7 @@
               <div class="use-text">
                 <a href="http://socrates.io/" class="use-link" target="_blank">Socrates.io</a>
                 A collaborative markdown editor and previewer.
-                <a href="http://socrates.io/">Try it »</a>
+                <a href="http://socrates.io/" target="_blank">Try it »</a>
               </div>
             </div>
             <div class="clearfix">
@@ -122,6 +122,7 @@
               <div class="use-text">
                 <a href="http://action.io/" class="use-link" target="_blank">Action.io</a>
                 A web-based IDE and deployment platform.
+                <a href="http://action.io/" target="_blank">Try it »</a>
               </div>
             </div>
           </div>
