Demo Page Tweaks 2

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,7 +30,7 @@
           <div id="firepad"></div>
         </div>
         <div id="share-box">
-          <div id="share-with-friends">Share with Friends</div>
+          <div id="share-with-friends">Edit with Friends</div>
           <div id="share-features">
             <table>
               <tr>
