Demo Page Tweaks 4

--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
                 </td>
                 <td>
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                  <div class="fb-like" data-send="true" data-width="250" data-show-faces="false" data-font="arial"></div>
+                  <div class="fb-like" data-send="true" data-width="250" data-layout="button_count" data-show-faces="false" data-font="arial"></div>
                 </td>
               </tr>
             </table>
