Demo Page Tweaks 6

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
               <div class="use-icon" style="margin-top: 21px;"><img src="images/use_ellipsis.png"></div>
               <div class="use-text">
                 <a href="./examples/" class="use-link">and more!</a>
-                Extend Firepad through its API or by contributing to the MIT licensed GitHub project.
+                Extend Firepad through its API or by contributing to the MIT licensed GitHub project.<br>
+                <a href="../examples/" target="_blank">See more »</a>
               </div>
             </div>
           </div>
@@ -170,7 +171,7 @@
             <div class="faq-question">
               <div class="faq-title">Who's behind Firepad?</div>
               <span>Firepad was built by <a href="https://twitter.com/mikelehen" target="_blank">Michael Lehenbauer</a> and the team at Firebase.
-              There are many other features that could be added, so please <a href="https://github.com/firebase/firepad" target="_blank">star Firepad on GitHub</a> and send
+              There are many other features that could be added, please <a href="https://github.com/firebase/firepad" target="_blank">star Firepad on GitHub</a> and send
               over a pull request when you have things to contribute!</span>
             </div>
             <div class="faq-question">
