Add utm_source to all outgoing links to firebase.com

--- a/demo/index.html
+++ b/demo/index.html
@@ -51,7 +51,7 @@
         <div id="description">Firepad is an open source collaborative text editor you can add to <b>your</b> own website.
           <div id="learn-more"><a href="http://www.firepad.io/">Learn More &gt;</a></div>
         </div>
-        <a href="http://www.firebase.com/" target="_blank" id="powered-by-firebase"></a>
+        <a href="http://www.firebase.com/?utm_source=demo&utm_medium=email&utm_campaign=firepad" target="_blank" id="powered-by-firebase"></a>
       </div>
     </div>
   </div>
