--- a/examples/index.html
+++ b/examples/index.html
@@ -78,7 +78,7 @@
         <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
       </div>
       <div id="powered-by-firebase">
-        <a href="https://www.firebase.com?utm_source=firepad&utm_medium=exampleapp" target="_blank"><img
+        <a href="https://www.firebase.com/?utm_source=examples&utm_medium=email&utm_campaign=firepad" target="_blank"><img
           src="../images/powered-by-firebase-dim.png"></a>
       </div>
     </div>
