--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <div class="faq-title">How is Firepad different than other collaborative text editors?</div>
               <span>Most collaborative text editors require special code to run on a server, making them
               impractical to use if you're not already using the right server stack. Firepad has no
-              server dependencies and instead relies on <a href="https://www.firebase.com" target="_blank">Firebase</a> for real-time data synchronization.
+              server dependencies and instead relies on <a href="https://www.firebase.com/?utm_source=landing&utm_medium=email&utm_campaign=firepad" target="_blank">Firebase</a> for real-time data synchronization.
               This means that it's easy to add Firepad to any application, even static websites.
               All you need to do is drop in the JavaScript files and go.</span>
             </div>
@@ -165,7 +165,7 @@
             <div class="faq-question">
             <div class="faq-title">Which technologies does Firepad use?</div>
               <span>Firepad uses the <a href="http://codemirror.net" target="_blank">CodeMirror</a> editor to render documents, and its operational transform
-              code borrows from <a href="https://github.com/Operational-Transformation/ot.js/" target="_blank">ot.js</a>. Behind the scenes, Firepad uses <a href="https://www.firebase.com" target="_blank">Firebase</a>
+              code borrows from <a href="https://github.com/Operational-Transformation/ot.js/" target="_blank">ot.js</a>. Behind the scenes, Firepad uses <a href="https://www.firebase.com/?utm_source=landing&utm_medium=email&utm_campaign=firepad" target="_blank">Firebase</a>
               for cloud data storage and synchronization.</span>
             </div>
             <div class="faq-question">
@@ -202,7 +202,7 @@
         <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
       </div>
       <div id="powered-by-firebase">
-        <a href="https://www.firebase.com?utm_source=firepad&utm_medium=exampleapp" target="_blank"><img src="images/powered-by-firebase-dim.png"></a>
+        <a href="https://www.firebase.com/?utm_source=landing&utm_medium=email&utm_campaign=firepad" target="_blank"><img src="images/powered-by-firebase-dim.png"></a>
       </div>
     </div>
   </div>
