Making the docs page pretty

--- a/examples/index.html
+++ b/examples/index.html
@@ -34,8 +34,8 @@
 
   <div class="container" id="examples-container">
     <div class="row">
-    <div class="span3 examples-sidebar">
-      <ul class="nav nav-list examples-sidenav">
+    <div class="span3 sidebar">
+      <ul class="nav nav-list sidenav">
         <li><a href="#richtext"><i class="icon-chevron-right"></i> Rich Text</a></li>
         <li><a href="#code"><i class="icon-chevron-right"></i> Code Editing</a></li>
         <li><a href="#userlist"><i class="icon-chevron-right"></i> User List</a></li>
