--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <div class="use-icon"><img src="images/user_action.png"></div>
               <div class="use-text">
                 <a href="http://action.io/" class="use-link" target="_blank">Action.io</a>
-                A web-based IDE and deployment platform.
+                A development platform with a collaborative web IDE.
                 <a href="http://action.io/" target="_blank">Try it »</a>
               </div>
             </div>
