Add id to examples page so you can copy/paste the url across tabs.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="clearfix">
               <div class="use-icon"><img src="images/use_richtext.png"></div>
               <div class="use-text">
-                <a href="./examples/#rich-text" class="use-link">Rich Text Editing</a>
+                <a href="./examples/#richtext" class="use-link">Rich Text Editing</a>
                 Enable synchronous rich-text document editing.
               </div>
             </div>
