Private Pad Link

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" />
   <link href="../css/prettify.css" type="text/css" rel="stylesheet" />
   <link rel="stylesheet" href="../css/global.css" />
+  <link href="images/favicon.ico" rel="shortcut icon" />
 </head>
 
 <body class="examples-page">
@@ -22,7 +23,7 @@
           <a href="../">Home</a>
           <a href="#" class="selected">Examples</a>
           <a href="../docs/">Documentation</a>
-          <a href="http://demo.firepad.io/" target="_blank">Private Firepad</a>
+          <a href="http://demo.firepad.io/" class="private-firepad"></a>
         </div>
         <a href="../">
           <div id="logo-small"></div>
