--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="#" class="selected">Home</a>
           <a href="examples/">Examples</a>
           <a href="docs/">Documentation</a>
-          <a href="http://demo.firepad.io/" target="_blank">Private Firepad</a>
+          <a href="http://demo.firepad.io/" class="private-firepad"></a>
         </div>
         <div id="home-title-container" class="clearfix">
             <img src="images/firepad_logo.png" alt="Firepad Logo" />
