--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="http://www.firepad.io/examples/firepad.css" />
   <link rel="stylesheet" href="http://www.firepad.io/examples/firepad-userlist.css" />
   <link rel="stylesheet" href="demo.css" />
+  <link href="../images/favicon.ico" rel="shortcut icon" />
 </head>
 
 <body>
