--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" />
   <link href="../css/prettify.css" type="text/css" rel="stylesheet" />
   <link rel="stylesheet" href="../css/global.css" />
-  <link href="images/favicon.ico" rel="shortcut icon" />
+  <link href="../images/favicon.ico" rel="shortcut icon" />
 </head>
 
 <body class="examples-page">
