Private Pad link on the homepage

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <div id="firepad-userlist"></div>
           <div id="firepad"></div>
         </div>
+        <div id="private-firepad-link" class="container">
+          <a href="http://demo.firepad.io" target="_blank">Create a private Firepad »</a>
+        </div>
       </div>
     </div>
   </div>
