Removed extraneous target=blank

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="use-text">
                 <a href="./examples/" class="use-link">and more!</a>
                 Extend Firepad through its API or by contributing to the MIT licensed GitHub project.<br>
-                <a href="../examples/" target="_blank">See more »</a>
+                <a href="../examples/">See more »</a>
               </div>
             </div>
           </div>
