Demo Top Images

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@
     <div id="top-bg-tile">
       <div id="top-content">
         <div id="firepad-demo"></div>
-        <a href="./" id="my-pads" class="sprite-btn"></a>
+        <a onclick="displayPads()" id="my-pads" class="sprite-btn"></a>
         <a href="./" id="create-pad" class="sprite-btn"></a>
         <div id="firepad-container">
           <div id="firepad-userlist"></div>
