Make sidebar nav scroll down with you.

--- a/examples/index.html
+++ b/examples/index.html
@@ -36,7 +36,7 @@
   <div class="container" id="examples-container">
     <div class="row">
     <div class="span3 sidebar">
-      <ul class="nav nav-list sidenav">
+      <ul class="nav nav-list sidenav" data-spy="affix" data-offset-top="150">
         <li><a href="#richtext" id="richtext-link"><i class="icon-chevron-right"></i> Rich Text</a></li>
         <li><a href="#code" id="code-link"><i class="icon-chevron-right"></i> Code Editing</a></li>
         <li><a href="#userlist" id="userlist-link"><i class="icon-chevron-right"></i> User List</a></li>
@@ -85,6 +85,7 @@
     </div>
   </div>
   <script src="../js/jquery-1.9.1.min.js"></script>
+  <script src="../js/bootstrap-affix.js"></script>
   <script src="../js/examples.js"></script>
   <script src="../js/prettify.js"></script>
   <script type="text/javascript">
