Try putting focus calls back to see if it fixes IE9.

--- a/examples/code.html
+++ b/examples/code.html
@@ -42,6 +42,7 @@
       lineNumbers: true,
       mode: 'javascript'
     });
+    codeMirror.focus();
 
     //// Create Firepad.
     var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror);
