--- a/examples/userlist.html
+++ b/examples/userlist.html
@@ -47,6 +47,7 @@
 
     //// Create CodeMirror (with lineWrapping on).
     var codeMirror = CodeMirror(document.getElementById('firepad'), { lineWrapping: true });
+    codeMirror.focus();
 
     // Create a random ID to use as our user ID (we must give this to firepad and FirepadUserList).
     var userId = Math.floor(Math.random() * 9999999999).toString();
