--- a/demo/index.html
+++ b/demo/index.html
@@ -27,6 +27,12 @@
         <div id="firepad-demo"></div>
         <a onclick="displayPads()" id="my-pads" class="sprite-btn"></a>
         <a href="./" id="create-pad" class="sprite-btn"></a>
+        <div id="my-pads-list">
+          <a>pad1</a>
+          <a>pad2</a>
+          <a>pad3</a>
+          <a>pad4</a>
+        </div>
         <div id="firepad-container">
           <div id="firepad-userlist"></div>
           <div id="firepad"></div>
