--- a/demo/index.html
+++ b/demo/index.html
@@ -82,5 +82,11 @@
   })();
 
 </script>
+
+<script type="text/javascript">
+    function displayPads() {
+      $('#my-pads-list').toggle();
+    }
+</script>
 </body>
 </html>
