--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" />
   <link href="../css/prettify.css" type="text/css" rel="stylesheet" />
   <link rel="stylesheet" href="../css/global.css" />
+  <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
+  <link rel="stylesheet" href="firepad.css" />
+  <link rel="stylesheet" href="firepad-userlist.css" />
   <link href="../images/favicon.ico" rel="shortcut icon" />
 </head>
 
@@ -48,7 +51,7 @@
           <a href="https://github.com/firebase/firepad/blob/gh-pages/examples/richtext.html" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
         <p>Use Firepad's rich text features for collaborative blogging, note taking, proofreading and much more!</p>
-        <iframe class="example-container"></iframe>
+        <div class="example-container"></div>
       </section>
 
       <section id="code">
@@ -56,7 +59,7 @@
           <a href="https://github.com/firebase/firepad/blob/gh-pages/examples/code.html" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
         <p>Combined with CodeMirror's extensive code editing features, Firepad is great for pair programming!</p>
-        <iframe class="example-container"></iframe>
+        <div class="example-container"></div>
       </section>
 
       <section id="userlist">
@@ -64,7 +67,7 @@
           <a href="https://github.com/firebase/firepad/blob/gh-pages/examples/userlist.html" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
         </div>
         <p>You can easily add user presence information and other features.</p>
-        <iframe class="example-container"></iframe>
+        <div class="example-container"></div>
       </section>
     </div>
   </div>
@@ -86,6 +89,10 @@
   </div>
   <script src="../js/jquery-1.9.1.min.js"></script>
   <script src="../js/bootstrap-affix.js"></script>
+  <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+  <script src="codemirror/lib/codemirror.js"></script>
+  <script src="firepad.js"></script>
+  <script src="firepad-userlist.js"></script>
   <script src="../js/examples.js"></script>
   <script src="../js/prettify.js"></script>
   <script type="text/javascript">
