--- a/examples/index.html
+++ b/examples/index.html
@@ -91,6 +91,7 @@
   <script src="../js/bootstrap-affix.js"></script>
   <script src="https://cdn.firebase.com/v0/firebase.js"></script>
   <script src="codemirror/lib/codemirror.js"></script>
+  <script src="codemirror/mode/javascript/javascript.js"></script>
   <script src="firepad.js"></script>
   <script src="firepad-userlist.js"></script>
   <script src="../js/examples.js"></script>
