Tweak initial text for code example.

--- a/examples/code.html
+++ b/examples/code.html
@@ -49,7 +49,7 @@
     //// Initialize contents.
     firepad.on('ready', function() {
       if (firepad.isHistoryEmpty()) {
-        firepad.setText('// Code Editing with Firepad!\nvar x = 3 + 4;\n');
+        firepad.setText('// JavaScript Editing with Firepad!\nfunction go() {\n  var message = "Hello, world.";\n  console.log(message);\n}');
       }
     });
   </script>
