Add 404 page, remove broken image reference.

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <a href="examples/">Examples</a>
         <a href="docs/">Docs</a>
         <a href="https://github.com/firebase/firepad" target="_blank">GitHub Project</a>
-        <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
+        <a href="mailto:firepad@firebase.com?subject=[Firepad Question]" target="_blank">Contact</a>
       </div>
       <div id="powered-by-firebase">
         <a href="https://www.firebase.com/?utm_source=landing&utm_medium=email&utm_campaign=firepad" target="_blank"><img src="images/powered-by-firebase-dim.png"></a>
