--- a/examples/index.html
+++ b/examples/index.html
@@ -79,7 +79,7 @@
         <a href="../index.html">Home</a>
         <a href="../docs/">Docs</a>
         <a href="https://github.com/firebase/firepad" target="_blank">GitHub Project</a>
-        <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
+        <a href="mailto:firepad@firebase.com?subject=[Firepad Question]" target="_blank">Contact</a>
       </div>
       <div id="powered-by-firebase">
         <a href="https://www.firebase.com/?utm_source=examples&utm_medium=email&utm_campaign=firepad" target="_blank"><img
