Add 'build something cool? we'd love to hear from you' note at bottom of docs and examples.

--- a/examples/index.html
+++ b/examples/index.html
@@ -69,8 +69,11 @@
         <p>You can easily add user presence information and other features.</p>
         <div class="example-container"></div>
       </section>
+      <div class="build-something">Build something cool of your own using Firepad?  We'd
+        love to <a href="mailto:firepad@firebase.com?subject=[Firepad]">hear from you</a>!
+      </div>
     </div>
-  </div>
+    </div>
   </div>
 
   <div id="footer-wrap">
