Make private firepad link target blank.

--- a/examples/index.html
+++ b/examples/index.html
@@ -26,7 +26,7 @@
           <a href="../">Home</a>
           <a href="#" class="selected">Examples</a>
           <a href="../docs/">Documentation</a>
-          <a href="http://demo.firepad.io/" class="private-firepad"></a>
+          <a href="http://demo.firepad.io/" target="_blank" class="private-firepad"></a>
         </div>
         <a href="../">
           <div id="logo-small"></div>
