Update tweet buttons since we have @Firepad now.

--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
                   <input type="text" readonly="readonly" id="url" />
                 </td>
                 <td>
-                  <a href="https://twitter.com/share" class="twitter-share-button" data-text="Come edit a document with me using @FirepadHQ!" data-count="none" data-size="large">Tweet</a>
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-text="Come edit a document with me using @Firepad!" data-count="none" data-size="large">Tweet</a>
                 </td>
                 <td>
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
