--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=firebase&repo=firepad&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
           </li>
 <!--          <li class="follow-btn">
-            <a href="https://twitter.com/firepadHQ" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @FirepadHQ</a>
+            <a href="https://twitter.com/firepad" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @Firepad</a>
           </li>  -->
           <li class="tweet-btn">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.firepad.io" data-count="horizontal" data-via="FirepadHQ" data-related="Firebase:Data Layer Behind Firepad">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.firepad.io" data-count="horizontal" data-via="Firepad" data-related="Firebase:Data Layer Behind Firepad">Tweet</a>
           </li>
           <li class="fb-btn">
             <div class="fb-like" data-href="http://www.firepad.io" data-send="false" data-layout="button_count" data-width="200" data-show-faces="false"></div>
