Add domain name to google analytics so it can track demo and www separately.

--- a/demo/index.html
+++ b/demo/index.html
@@ -69,6 +69,7 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-39969708-1']);
+  _gaq.push(['_setDomainName', 'firepad.io']);
   _gaq.push(['_trackPageview']);
 
   (function() {
