--- a/examples/code.html
+++ b/examples/code.html
@@ -15,8 +15,9 @@
   <script src="firepad.js"></script>
   <link rel="stylesheet" href="firepad.css" />
 
-  <!-- Helper for generating URLs / Firebase references for example purposes. -->
-  <script src="helpers.js"></script>
+  <!-- Helper for generating URLs / Firebase references for example purposes.
+       Not necessary in production apps. -->
+  <script src="example-helper.js"></script>
 
   <style>
     html { height: 100%; }
@@ -34,8 +35,9 @@
 
   <script>
     //// Initialize Firebase.
-    // var ref = new Firebase('<YOUR FIREBASE URL>');
     var firepadRef = getExampleRef();
+    // TODO: Replace above line with:
+    // var ref = new Firebase('<YOUR FIREBASE URL>');
 
     //// Create CodeMirror (with line numbers and the JavaScript mode).
     var codeMirror = CodeMirror(document.getElementById('firepad-container'), {
