--- a/examples/richtext.html
+++ b/examples/richtext.html
@@ -14,8 +14,9 @@
   <script src="firepad.js"></script>
   <link rel="stylesheet" href="firepad.css" />
 
-  <!-- Helper for generating URLs / Firebase references for example purposes. -->
-  <script src="helpers.js"></script>
+  <!-- Helper for generating URLs / Firebase references for example purposes.
+       Not necessary in production apps. -->
+  <script src="example-helper.js"></script>
 
   <style>
     html { height: 100%; }
@@ -33,8 +34,9 @@
 
   <script>
     //// Initialize Firebase.
-    // var firepadRef = new Firebase('<YOUR FIREBASE URL>');
     var firepadRef = getExampleRef();
+    // TODO: Replace above line with:
+    // var firepadRef = new Firebase('<YOUR FIREBASE URL>');
 
     //// Create CodeMirror (with lineWrapping on).
     var codeMirror = CodeMirror(document.getElementById('firepad'), { lineWrapping: true });
